# sys-monitor-examples

./: .gitignore  .gitmodules
components/sys-mon-component/: CMakeLists.txt  component.mk
esp32/: CMakeLists.txt  Makefile  sdkconfig.defaults
esp32/config/: sys_monitor_cfg.h
esp32/main/: CMakeLists.txt  fast_scan.c
esp32/smon-component/: CMakeLists.txt  component.mk
esp8266/: CMakeLists.txt  Makefile
esp8266/config/: sys_monitor_cfg.h
esp8266/main/: CMakeLists.txt
esp8266/smon-component/: CMakeLists.txt  component.mk
esp8266/src/: tcp_client.c
